BetterDiscord/main.css
/* ... */
.bd-notice-button:hover {background: #1db954; border-color: #23db64; color: black;}

/* Error/description box in settings plugin section */
.bd-description-wrap .banner {
  border-radius: 0px;
  justify-content: center;
}
.banner.banner-danger {
  border-color: #f04747;
  background: #473c41;
}
/* Addon Error Divider */
.bd-divider {
  display: none;
}

/* Invisible Typing Plugin Button */
.buttons-uaqb-5 .IT-button {
  display: var(--Invisible-Typing-Bar-Toggle-Icon);
  background: var(--channeltextarea-background);
  margin: 0px;
  align-items: center;
}

/*
====================================================================================================================
                                     Settings Custom CSS
====================================================================================================================
*/

/* Settings text/box at the top of settings */
:root .sidebarRegion-1VBisG::before {
  content: "Settings";
  position: absolute;
  z-index: 101;
  height: 48px;
  left: 60px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 18px;
  font-weight: bolder;
  color: var(--header-primary);
}
/* Black box behind the "settings" text in settings */
:root .sidebarRegion-1VBisG::after {
  content: "";
  position: absolute;
  align-items: top;
  z-index: 100;
  width: 100%;
  height: 49px;
  background-color: var(--background-primary);
  border-bottom: 2px solid var(--background-modifier-accent);
  border-radius: 0 0 var(--border-radius) var(--border-radius);
  background-image: linear-gradient(to right, #181818 100%, rgba(255, 255, 255, 0) 0%);
  background-position: bottom;
  background-size: 2px 0px;
  background-repeat: repeat-x;
}

/* Both server settings and settings */
.sidebar-nqHbhN {padding: 50px 0px 60px 0px !important;}
body #app-mount .sidebar-nqHbhN, body #app-mount .layer-86YKbF ~ .layer-86YKbF .sidebar-nqHbhN {width: 190px !important;}
body #app-mount .sidebarRegion-1VBisG {  flex-basis: calc(0px + (var(--usesettingsicons) * (var(--settingsiconssize) + var(--settingsiconsgap)))) !important;}

/* Settings sidebar containers */
.header-2Kx1US {padding: 6px 10px !important;}
.header-2Kx1US, .bd-sidebar-header {background: var(--background-primary); text-align: center; align-items: center;}
.bd-sidebar-header .header-2Kx1US {margin-left: 19%; margin-bottom: 0px;}
.side-2ur1Qk .separator-2wx7h6 {display: block; margin: 0px; padding: 1px;}
.sidebarRegion-1VBisG {border-right: 1px solid var(--border-color);}
.contentColumnDefault-3eyv5o {padding-left: 15px; padding-right: 15px;}
/* Wide settings (Better Discord Grid) */
.bd-controls+ .bd-addon-list {
  margin-top: 15px;
  margin-left: 0%;
  margin-right: 0px;
}

/* My Account settings section (Edit, remove & Disable account buttons + blur "your current phone number is") */
.fieldButton-14lHvK {
  background-color: var(--brand-experiment);
  border: 0px solid #313b5e;
  border-width: 0px 0px 0px 0px !important;
}
.theme-dark .lookLink-9FtZy-.colorPrimary-3b3xI6 {
  background-color: #b03032 !important;
  border-width: 0px 0px 0px 0px !important;
  border-radius: var(--server-radius);
}
.theme-dark .lookLink-9FtZy-.colorPrimary-3b3xI6:hover {
  background-color: rgba(176, 48, 50, 0.8) !important;
  border-width: 0px 0px 0px 0px !important;
  border-radius: var(--server-radius);
}
.removeButton-v6eolJ {
  background-color: #b03032 !important;
}
/* The 3 edit buttons */
#my-account-tab > div > div > div.children-1xdcWE > div > div.background-3d_SjE > div > div > button, #my-account-tab > div > div > div.children-1xdcWE > div > div.background-3d_SjE > div > div > div.fieldButtonList-28BYbB > button.fieldButton-14lHvK.button-f2h6uQ.lookFilled-yCfaCM.colorPrimary-2AuQVo.sizeSmall-wU2dO-.grow-2sR_-F {background: var(--brand-experiment) !important;}

#app-mount > div.app-3xd6d0 > div > div.layers-OrUESM.layers-1YQhyW > div:nth-child(2) > div > div.contentRegion-3HkfJJ > div > div > main > div > div.userSettingsSecurity-3C5Hg5.marginTop40-Q4o1tS > div.children-1xdcWE > div.flex-2S1XBF.flex-3BkGQD.horizontal-112GEH.horizontal-1Piu5-.flex-3BkGQD.directionRow-2Iu2A9.justifyStart-2Mwniq.alignStretch-Uwowzr.noWrap-hBpHBz > div > div > div.marginTop40-Q4o1tS > div.children-1xdcWE > div.colorStandard-21JIj7.size14-3fJ-ot.description-30xx7u.formText-2ngGjI.marginBottom8-emkd0_.modeDefault-2fEh7a {filter: blur(4px); opacity: 0.8;}
#app-mount > div.app-3xd6d0 > div > div.layers-OrUESM.layers-1YQhyW > div:nth-child(2) > div > div.contentRegion-3HkfJJ > div > div > main > div > div.userSettingsSecurity-3C5Hg5.marginTop40-Q4o1tS > div.children-1xdcWE > div.flex-2S1XBF.flex-3BkGQD.horizontal-112GEH.horizontal-1Piu5-.flex-3BkGQD.directionRow-2Iu2A9.justifyStart-2Mwniq.alignStretch-Uwowzr.noWrap-hBpHBz > div > div > div.marginTop40-Q4o1tS > div.children-1xdcWE > div.colorStandard-21JIj7.size14-3fJ-ot.description-30xx7u.formText-2ngGjI.marginBottom8-emkd0_.modeDefault-2fEh7a:hover {filter: blur(0px);}
/* "My Account" in settings (Container for banner, pfp, Username, Email & Phone Number) */
.avatarUploaderIndicator-2G-aIZ {display: none;}
.settingsBanner-1eDJ5w {
  width: 100%;
  height: 300px;
  border-radius: var(--server-radius);
  border: 16px solid var(--background-secondary);
}
.background-3d_SjE {
  border-radius: var(--server-radius);
  background-color: var(--background-primary);
  padding: 10px;
  margin: 16px 16px 16px;
}
.fieldList-in8WkP {
  border-radius: var(--server-radius);
  background-color: var(--background-modifier-hover);
  padding: 5px;
}
.userInfo-regn9W {
  height: 100px;
  width: 100%;
  background-color: var(--background-primary);
  padding: 24px 16px 0 100px;
  border-left: 16px solid var(--background-secondary);
  border-right: 16px solid var(--background-secondary);
}
.divider-3LgWDL {
  width: 100%;
  height: 1px;
}
.avatar-3mTjvZ.wrapper-1VLyxH {
  margin-top: 227px;
}
.avatar-3mTjvZ {border-color: var(--background-primary);}
/* ... */

